# grip

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  agents.toml  tarpaulin-report.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.gr2/: hooks.toml
benches/: benchmarks.rs
docs/: ASSESS-gr2-lanes-cross-mode-stress.md  ASSESS-gr2-shared-scratchpads-stress.md  AUDIT-gr2-current-surface-vs-rulebook.md  MANIFESTO-gr2-ux.md  PLAN-gr2-needs-and-criteria.md  PLAN-gr2-repo-maintenance-and-lanes.md  PLAN-gr2-shared-scratchpads.md  PLAN-p3-extensibility.md  PLATFORM_CAPABILITIES.md  gr-commands.md  gr-spawn.md  manifest-schema.yaml  pr-create-diagnostics-fix-2026-05-08.md
docs/design/: RFC-shared-fs-vs-worktree-clones.md  grip-object-model-phase0-test-plan.md
docs/skills/: gitgrip.md
gr2/: Cargo.toml  README.md  conftest.py  pyproject.toml
gr2/docs/: ASSESS-SYNC-ADVERSARIAL-SPECS.md  AUDIT-GR-VS-GR2.md  GR1-GR2-MIGRATION-PLAYBOOK.md  GR2-MVP.md  HOOK-CONFIG-MODEL.md  HOOK-EVENT-CONTRACT.md  PLATFORM-ADAPTER-AND-SYNC.md  PR-LIFECYCLE.md  SYNAPT-INTEGRATION.md  SYNC-FAILURE-CONTRACT.md
gr2/gr2_overlay/: __init__.py  activate.py  agent_manifest.py  cli.py  cross_repo.py  drivers.py  introspection.py  ip.py  language_drivers.py  objects.py  perf.py  refs.py  resolve.py  trust.py  types.py  units.py  workspace_spec.py
gr2/gr2_overlay/tests/: test_overlay_refs_namespace.py
gr2/prototypes/: README.md  cache_materialization_probe.py  channel_lane_bridge.py  concurrent_lease_stress.py  cross_mode_lane_stress.py  identity_unit_binding.py  lane_workspace_prototype.py  layout_model_probe.py  org_policy_compiler.py  python_exec_playground.py  python_hook_runtime_playground.py  python_migration_playground.py  python_review_checkout_playground.py  python_spec_apply_playground.py  real_git_lane_materialization.py  real_git_playground.py  recall_lane_history.py  repo_maintenance_prototype.py  repo_transport_probe.py
gr2/python_cli/: __init__.py  __main__.py  app.py  channel_bridge.py  config.py  events.py  execops.py  failures.py  gitops.py  grip.py  grip_cli.py  hooks.py  migration.py  platform.py  pr.py  spec_apply.py  syncops.py
gr2/src/: args.rs  dispatch.rs  exec.rs  lane.rs  lib.rs  main.rs  plan.rs  repo_status.rs  spec.rs
gr2/tests/: conftest.py  test_agent_manifest_overlay_source.py  test_apply_convergence.py  test_channel_bridge.py  test_config_corruption.py  test_config_overlay.py  test_config_restore_orphans.py  test_events.py  test_execops.py  test_grip_cli.py  test_grip_hardening.py  test_grip_object_model.py  test_grip_snapshot.py  test_hook_events.py  test_hook_hardening.py  test_ip_boundary.py  test_m2_overlay_hindsight.py  test_m2_overlay_mem0.py  test_m2_overlay_zep.py  test_migration.py  test_migration_overlay_compatibility.py  test_overlay_acceptance.py  test_overlay_activate.py  test_overlay_cli.py  test_overlay_cli_wiring.py  test_overlay_composition_merge.py  test_overlay_cross_repo_atomic_apply.py  test_overlay_cross_repo_perf_gate.py  test_overlay_cross_repo_rollback.py  test_overlay_driver_registry.py  test_overlay_introspection.py  test_overlay_multi_stack.py  test_overlay_object_encoding.py  test_overlay_object_encoding.rs  test_overlay_perf_gates.py  test_overlay_python_driver.py  test_overlay_resolve.py  test_overlay_tier_b_encoding.py  test_overlay_tier_b_perf_gates.py  test_overlay_tier_b_repo_state.py  (+13 more)
prompts/: apollo.md  atlas.md  opus.md  sentinel.md
scripts/: claudemock  e2e-demo.sh  enforce-gr-branch.sh
skills/: synapt-loop.md
src/: lib.rs  main.rs
src/cli/: args.rs  context.rs  dispatch.rs  mod.rs  output.rs  output_sink.rs
src/core/: agent_registry.rs  detect.rs  gripspace.rs  griptree.rs  manifest.rs  mod.rs  repo.rs  repo_manifest.rs  state.rs  sync_state.rs  (+2 more)
tests/: cli_tests.rs  griptree_tests.rs  integration_agent_id.rs  multi_provider_e2e.rs  spawn_graceful_shutdown.sh  test_add.rs  test_branch.rs  test_checkout.rs  test_commit.rs  test_diff_e2e.rs  test_edge_cases.rs  test_errors.rs  test_forall.rs  test_grep.rs  test_grip_object_model_phase0.rs  test_json_output.rs  test_mcp_server.rs  test_platform_github.rs  test_playground.rs  test_pr_checks_status.rs  test_pr_list_view.rs  test_pr_merge.rs  test_prune.rs  test_pull.rs  test_push.rs  test_rebase.rs  test_repo_commands.rs  test_spawn_tmux.rs  test_status.rs  test_sync.rs  test_tree.rs  test_verify.rs
(+96 files in other folders)
